--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,13 +2,14 @@
 <!-- slider section -->
 <div class="hero_area">
 
-  {% if messages %}
+{% if messages %}
 <ul class="messages">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
+
 
     <section class=" slider_section position-relative">
         <div id="Customcarousel1" class="carousel slide" data-ride="carousel">
@@ -148,25 +149,28 @@
         </div>
         <div class="teacher_container layout_padding2">
             <div class="row">
+                {% for teacher in teachers  %}   
                 <div class="col-md-3 col-sm-6">
                     <div class="box">
                         <div class="img-box">
-                            <img class="" src="{% static 'images/teacher-1.jpg' %}" alt="Card image cap">
+                            <img class="" src="{{teacher.image.url}}" alt="Card image cap">
                         </div>
                         <div class="detail-box">
                             <p>
                                 <h5>
-                                    Rose Adams
+                                     {{teacher.first_name}} {{teacher.last_name}} <br>
+                                     {{teacher.speciality}}
                                 </h5>
                             </p>
                         </div>
                     </div>
                 </div>
+                {% endfor %} 
 
             </div>
         </div>
         <div class="btn-box">
-            <a href="">
+            <a href="{% url 'teacher' %}">
           See More
         </a>
         </div>
