--- a/templates/header.html
+++ b/templates/header.html
@@ -50,9 +50,18 @@
           </div>
           <div id="myNav" class="overlay">
             <div class="overlay-content">
-              <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="teacher.html" class="active">Teachers</a>
+              <a href="{% url 'home' %}">Home</a>
+              <a href="{% url 'about' %}">About</a>
+              <a href="{% url 'teacher' %}" class="active">Teachers</a>
+
+              {% if  request.user.is_authenticated %}
+
+              <a href="{% url 'admin:index' %}">AdminDashboard</a>
+              <a href="{% url 'logout' %}">Logout</a>
+              {% else %}
+              <a href="{% url 'login' %}">Login</a>
+
+              {% endif %}
             </div>
           </div>
       </div>
